log
Tue 09 May 2023 11:53:05 PM UTC: 
 tests:  0|4
total_score: 0/70
78f4a57
Wed 10 May 2023 12:18:38 AM UTC: 
 heap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|0
2b83d02
Wed 10 May 2023 12:19:37 AM UTC: 
 heap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
31fb622
Wed 10 May 2023 12:20:11 AM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:37:23: error: too few arguments to function ‘calloc’
   37 |     newHeap = (Heap*) calloc(sizeof(Heap));
      |                       ^~~~~~
In file included from test.c:2:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:543:14: note: declared here
  543 | extern void *calloc (size_t __nmemb, size_t __size)
      |              ^~~~~~
In file included from test.c:4:
heap.c:40:26: error: too few arguments to function ‘calloc’
   40 |     newHeap->heapArray = calloc(sizeof(heapElem));
      |                          ^~~~~~
In file included from test.c:2:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:543:14: note: declared here
  543 | extern void *calloc (size_t __nmemb, size_t __size)
      |              ^~~~~~
Compilation failed
affc676
